--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -8,3 +8,8 @@ tasks:
   - init: pip install -r requirements.txt
 
 
+vscode:
+  extensions:
+    - ms-python.python
+    - ms-vscode.cpptools
+    - dbaeumer.vscode-eslint
