some gitpod extension updates, plus export of veg poly .shp for earth engine upload

--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -11,5 +11,5 @@ tasks:
 vscode:
   extensions:
     - ms-python.python
-    - ms-vscode.cpptools
     - dbaeumer.vscode-eslint
+    - ms-toolsai.jupyter
